enh(front): prevent initial message to be selectable, align user icon right, replace Send icon with Visibility icon

--- a/frontend/components/TextBubbleComponent/TextBubbleComponent.module.css
+++ b/frontend/components/TextBubbleComponent/TextBubbleComponent.module.css
@@ -64,3 +64,16 @@
   margin-bottom: 10px;
   margin-top: 10px;
 }
+
+.botHeader {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.userHeader {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  justify-content: flex-end;
+}
